@@ -14,10 +14,10 @@
 
   <properties>
     <boringssl.version>2.0.7.Final</boringssl.version>
-    <jooby.version>1.2.3</jooby.version>
-    <jooq.version>3.10.4</jooq.version>
-    <spek.version>1.1.5</spek.version>
-    <kotlin.version>1.2.21</kotlin.version>
+    <jooby.version>1.5.1</jooby.version>
+    <jooq.version>3.11.4</jooq.version>
+    <spek.version>1.2.1</spek.version>
+    <kotlin.version>1.2.61</kotlin.version>
     <hibernate-validator.version>6.0.7.Final</hibernate-validator.version>
     <freemarker.version>2.3.27-incubating</freemarker.version>
     <javax.el-api.version>3.0.0</javax.el-api.version>
@@ -135,13 +135,13 @@
     <dependency>
       <groupId>org.webjars</groupId>
       <artifactId>jquery</artifactId>
-      <version>3.2.1</version>
+      <version>3.3.1-1</version>
     </dependency>
 
     <dependency>
       <groupId>org.webjars.npm</groupId>
       <artifactId>summernote</artifactId>
-      <version>0.8.9</version>
+      <version>0.8.10</version>
     </dependency>
 
     <!-- tests -->
@@ -149,14 +149,14 @@
     <dependency>
       <groupId>com.nhaarman</groupId>
       <artifactId>mockito-kotlin</artifactId>
-      <version>1.5.0</version>
+      <version>1.6.0</version>
       <scope>test</scope>
     </dependency>
 
     <dependency>
       <groupId>org.mockito</groupId>
       <artifactId>mockito-core</artifactId>
-      <version>2.15.0</version>
+      <version>2.21.0</version>
       <scope>test</scope>
     </dependency>
 
@@ -370,6 +370,36 @@
     </repository>
   </repositories>
   <profiles>
+    <profile>
+      <id>java-10</id>
+      <activation>
+        <jdk>10</jdk>
+      </activation>
+      <build>
+        <plugins>
+          <plugin>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <configuration>
+              <source>10</source>
+              <target>10</target>
+              <compilerArgs>
+                <arg>--add-modules=java.xml.bind</arg>
+                <arg>--add-modules=java.se.ee</arg>
+              </compilerArgs>
+              <fork>true</fork>
+            </configuration>
+            <!-- without forking compilation happens in the
+                                                    same process, so no arguments are applied -->
+          </plugin>
+          <plugin>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <configuration>
+              <argLine>--add-modules=java.xml.bind --add-modules=java.se.ee</argLine>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
     <profile>
       <id>java-9</id>
       <activation>
